--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "Parse a CSS dimension (i.e., number, length, percentage) into a JavaScript object.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run cover && npm run check-coverage",
-    "cover": "istanbul cover test/index.js",
-    "check-coverage": "istanbul check-coverage"
+    "clean": "rimraf coverage dist *.log css-list-helpers-*",
+    "codecov": "codecov -f coverage/lcov.info",
+    "prebuild": "npm run clean && npm run lint",
+    "build": "tsc",
+    "prebuild:watch": "npm run prebuild",
+    "build:watch": "tsc --watch",
+    "lint": "tslint --project tsconfig.test.json",
+    "pretest": "npm run build -- --project tsconfig.test.json",
+    "test": "nyc ava --verbose",
+    "watch": "concurrently \"npm run build:watch\" \"npm test -- --watch\"",
+    "prepack": "npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,6 +36,25 @@
     "url": "https://github.com/jedmao/parse-css-dimension/issues"
   },
   "homepage": "https://github.com/jedmao/parse-css-dimension#readme",
+  "nyc": {
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
+    "include": [
+      "dist/**/*.js"
+    ],
+    "exclude": [
+      "dist/**/*.test.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "cache": true,
+    "all": true,
+    "check-coverage": true
+  },
   "dependencies": {
     "css-angle-units": "^1.0.1",
     "css-frequency-units": "^1.0.1",
@@ -39,7 +66,15 @@
     "lodash.zipobject": "^4.1.3"
   },
   "devDependencies": {
-    "istanbul": "^0.3.22",
-    "tape": "^4.2.1"
+    "@types/lodash.fill": "^3.4.4",
+    "@types/lodash.merge": "^4.6.4",
+    "@types/lodash.zipobject": "^4.1.4",
+    "@types/node": "^10.7.1",
+    "ava": "^0.25.0",
+    "concurrently": "^3.6.1",
+    "nyc": "^12.0.2",
+    "rimraf": "^2.6.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1"
   }
 }
